# data-grid

./: .eslintrc.json  .gitignore  LICENSE  MANIFEST.in  README.md  esbuild.config.mjs  install.json  package-lock.json  package.json  pyproject.toml  setup.py  vite.config.mjs
.github/workflows/: deploy.yml
data_grid/: __init__.py  dataGrid.js  main.js
examples/: dataGrid.html  dataGrid.ipynb
js/: dataGrid.js  dataGrid.mjs  dataGridAxis.mjs  filterBox.mjs  filterSearch.mjs  pivotTable.mjs  template.mjs  widget.js  widget.mjs
jupyter-config/nbconfig/notebook.d/: data-grid.json
lib/: index.js
src/data_grid/: __init__.py
