[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-grid"
version = "0.1.0"
description = "Dependency-free pivotable grid as Jupyter widget"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
dependencies = [
    "anywidget>=0.9.18",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.9",
    "jupyterlite-core>=0.6.4",
    "jupyterlite-pyodide-kernel>=0.6.1",
    "pandas>=2.3.3",
    "watchfiles>=1.1.0",
]

[tool.hatch.build]
only-packages = true
artifacts = ["src/data_grid/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/data_grid/static/widget.js"]
skip-if-exists = ["src/data_grid/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
